Split directories. v1 v2
